--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,4 @@
-<h1>Hippopotamus</h1>
+<h1>Sähkö on nyt kallista</h1>
+<h1>{{price}} snt/kWh</h1>
+<h2>Tuuli{{wind}} m/s</h2>
+<H2>Lämpötila {{temperature}}</H2>
