päivitä nyt saatana

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
+<p>Tamä on testiaikainen kotisivu</p>
+
 <h1>Sähkö on nyt kallista</h1>
 </h1 class="expensive">{{price}} snt/kWh</h1>
 <h2>Tuuli {{wind}} m/s</h2>
