styles+hourly+index

--- a/views/hourly.handlebars
+++ b/views/hourly.handlebars
@@ -1,4 +1,4 @@
-<h1>Sähkön tuntihinnat seuraavakke 24 tunnille</h1>
+<h1>Sähkön tuntihinnat seuraavalle 24 tunnille</h1>
 
 <table>
     <tr>
@@ -6,7 +6,7 @@
         <th>Hinta (cnt/kWh)</th>
     </tr>
     <tr>
-        <td>{{hour}}/td
-            <td>{{price}}</td>
+        <td>{{hour}}</td>
+        <td>{{price}}</td>
     </tr>
 </table>
