--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,18 +1,17 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 h1 {font-size: 48px;}
-h2 {font-size: 24px;}
 
 .expensive {
     color: crimson;
 }
 
 .cheap {
-    color: chartreuse;
+    color: darkgreen;
 }
 
 .average {
-    color: gold;
+    color: cornflowerblue;
 }
