--- a/views/hourly.handlebars
+++ b/views/hourly.handlebars
@@ -5,8 +5,10 @@
         <th>Tunti</th>
         <th>Hinta (cnt/kWh)</th>
     </tr>
+    {{#each tableData}}
     <tr>
         <td>{{hour}}</td>
         <td>{{price}}</td>
     </tr>
+    {{/each}}
 </table>
