Chart lisätty - kopio vainiolta

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,5 @@
-<p>Tamä on testiaikainen kotisivu</p>
-
+<p>Tämä on testiaikainen kotisivu, jossa on simuloitua dataa</p>
 <h1>Sähkö on nyt kallista</h1>
 <h1 class="expensive">{{price}} snt/kWh</h1>
 <h2>Tuuli {{wind}} m/s</h2>
-<H2>Lämpötila {{temperature}}</H2>
+<h2>Lämpötila {{temperature}}</h2>
