--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,3 +3,36 @@
 <h1 class="expensive">{{price}} snt/kWh</h1>
 <h2>Tuuli {{wind}} m/s</h2>
 <h2>Lämpötila {{temperature}}</h2>
+<h2>
+    <br>
+    <br>
+</h2>
+
+{{!-- Show digital clock rendered by client ie browser  --}}
+{{!-- It is not wise to use a server to do something that client can do --}}
+<h2 onload=showTime() id="clock"></h2>
+<script>
+const secondHand = document.querySelector('.second-hand');
+const minsHand = document.querySelector('.min-hand');
+const hourHand = document.querySelector('.hour-hand');
+
+ function setDate() {
+  const now = new Date();
+
+  const seconds = now.getSeconds();
+  const secondsDegrees = ((seconds / 60) * 360) + 90;
+  secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+  const mins = now.getMinutes();
+  const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
+  minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+  const hour = now.getHours();
+  const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
+  hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+}
+
+setInterval(setDate, 1000);
+
+setDate();
+</script>
