--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,176 +1,55 @@
-/* Common settings for the whole page are defined in the body */
+/* Common settings for the whole page are defined in the body*/
 body {
-    font-family:Arial, Helvetica, sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
+  background-color: #cbcbcb;
 }
 
 h1 {font-size: 48px;}
 
-/* CSS classes for colors describing price with colors */
+/* CSS classes for colors desribing prices*/
 .expensive {
-    color: crimson;
+  color: crimson;
 }
 
 .cheap {
-    color: darkgreen;
+  color: darkgreen;
 }
 
 .average {
-    color: cornflowerblue;
+  color: cornflowerblue;
 }
 
-/* Table settingsfor rounded corners */
+/* Table settings */
 table {
-    border-radius: 10px; /* rounded corners */
-    border: 1px solid #000000;
-    border-spacing: 0px;
-    border-collapse: separate;
+  border-radius: 10px; /* Rounded corners */
+  border: 1px solid #ddd;
+  border-spacing: 0;
+  border-collapse: separate;
 
-    /* prevent table data and header backround color exceeding table boundaries
-    this is needed because table has rounded corners */
-    overflow: hidden;
+  /* Prevent table data and header background color exceeding table boundaries
+  This is needed because table has rounded corners */
+  overflow: hidden;
 }
 
-/* Set every other row (even) to light gray backround */
+/* Set every other row (even) to light gray backrgound*/
 tr:nth-child(even){background-color: #989898;}
-
 
 /* Table header column settings */
 th {
-    padding: 10px;
-    color: #1b1b1b;
-    background-color: rgba(238, 255, 2, 0.511);
-    
+  padding: 10px;
+  color: #1b1b1b;
+  background-color: rgba(238, 255, 2, 0.511);
 }
 
-/* Table data column settings */
+/* Table data column settings*/
 td {
-    padding: 8px;
-    color: black;
+  padding: 8px;
+  color: white;
 }
+
 /* Pages that show a digital clock uses this class definition*/
-.clock {
-    width: 30rem;
-    height: 30rem;
-    position: relative;
-    padding: 2rem;
-    border: 7px solid #282828;
-    box-shadow: -4px -4px 10px rgba(67,67,67,0.5),
-                  inset 4px 4px 10px rgba(0,0,0,0.5),
-                  inset -4px -4px 10px rgba(67,67,67,0.5),
-                  4px 4px 10px rgba(0,0,0,0.3);
-    border-radius: 50%;
-    margin: 50px auto;
-  
-  }
-  .outer-clock-face {
-    position: relative;
-    background: #282828;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-  }
-  
-  .outer-clock-face::after {
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    transform: rotate(90deg)
-  }
-  
-  .outer-clock-face::after,
-  .outer-clock-face::before,
-  .outer-clock-face .marking{
-    content: '';
-    position: absolute;
-    width: 5px;
-    height: 100%;
-    background: #1df52f;
-    z-index: 0;
-    left: 49%;
-  }
-
-  .outer-clock-face .marking {
-    background: #bdbdcb;
-    width: 3px;
-  }
-  
-  .outer-clock-face .marking.marking-one {
-    -webkit-transform: rotate(30deg);
-    -moz-transform: rotate(30deg);
-    transform: rotate(30deg)
-  }
-  
-  .outer-clock-face .marking.marking-two {
-    -webkit-transform: rotate(60deg);
-    -moz-transform: rotate(60deg);
-    transform: rotate(60deg)
-  }
-  
-  .outer-clock-face .marking.marking-three {
-    -webkit-transform: rotate(120deg);
-    -moz-transform: rotate(120deg);
-    transform: rotate(120deg)
-  }
-  
-  .outer-clock-face .marking.marking-four {
-    -webkit-transform: rotate(150deg);
-    -moz-transform: rotate(150deg);
-    transform: rotate(150deg)
-  }
-
-  .inner-clock-face {
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
-    background: #282828;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-    z-index: 1;
-  }
-  
-  .inner-clock-face::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 16px;
-    height: 16px;
-    border-radius: 18px;
-    margin-left: -9px;
-    margin-top: -6px;
-    background: #4d4b63;
-    z-index: 11;
-  }
-
-  .hand {
-    width: 50%;
-    right: 50%;
-    height: 6px;
-    background: #61afff;
-    position: absolute;
-    top: 50%;
-    border-radius: 6px;
-    transform-origin: 100%;
-    transform: rotate(90deg);
-    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-  }
-  
-  .hand.hour-hand {
-    width: 30%;
-    z-index: 3;
-  }
-  
-  .hand.min-hand {
-    height: 3px;
-    z-index: 10;
-    width: 40%;
-  }
-  
-  .hand.second-hand {
-    background: #ee791a;
-    width: 45%;
-    height: 2px;
-  }
+.digitalClock {
+  font-size: xx-large;
+  font-family: 'Seven Segment';
+  color: green;
+}  
