--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
+
+{{!-- Simulated data rendered from app.js routes section --}}
 <p>Tämä on testiaikainen kotisivu, jossa on simuloitua dataa</p>
 <h1>Sähkö on nyt kallista</h1>
 <h1 class="expensive">{{price}} snt/kWh</h1>
@@ -6,33 +8,65 @@
 <h2>
     <br>
     <br>
+
+{{!-- Show the current date and a digital clock --}}
+{{!-- Data will be rendered by client ie. browser:  put no overhead to server--}}
 </h2>
+<h3>Tänään on</h3>
+<h3 id="dayName"></h3>
+<h3 id="dateString"></h3>
 
-{{!-- Show digital clock rendered by client ie browser  --}}
-{{!-- It is not wise to use a server to do something that client can do --}}
-<h2 onload=showTime() id="clock"></h2>
+{{!-- There must be an event to trigger functions or scripts in the browser, run the script when page loads --}}
+<h2 onload=showTime() id="clock" class="digitalClock"></h2>
 <script>
-const secondHand = document.querySelector('.second-hand');
-const minsHand = document.querySelector('.min-hand');
-const hourHand = document.querySelector('.hour-hand');
+    // ES6 style function to create time string and update it every second
+    const showTime = () => {
 
- function setDate() {
-  const now = new Date();
+        // Create a date object containing curent timestamp
+        const date = new Date();
 
-  const seconds = now.getSeconds();
-  const secondsDegrees = ((seconds / 60) * 360) + 90;
-  secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+        // Separate hours, minutes and seconds
+        let h = date.getHours(); 
+        let m = date.getMinutes(); 
+        let s = date.getSeconds();
+        let weekdayNumber = date.getDay();
+        let day = date.getDate();
+        let month = date.getMonth();
+        let year = date.getFullYear();
 
-  const mins = now.getMinutes();
-  const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
-  minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+        // Add leading zeros in simplified if
+        h = (h < 10) ? "0" + h : h;
+        m = (m < 10) ? "0" + m : m;
+        s = (s < 10) ? "0" + s : s;
 
-  const hour = now.getHours();
-  const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
-  hourHand.style.transform = `rotate(${hourDegrees}deg)`;
-}
+        // Dictionary for Finnish day names
+        const dayNameLookup = {
+            1: 'maanantai',
+            2: 'tiistai',
+            3: 'keskiviikko',
+            4: 'torstai',
+            5: 'perjantai',
+            6: 'lauantai',
+            7: 'sunnuntai'
+        };
 
-setInterval(setDate, 1000);
+        // Lookup day name by number 1 monday, 7 sunday
+        let dayName = dayNameLookup[weekdayNumber];
 
-setDate();
+        // Build a string for time and put it into h2 tag named clock
+        let time = h + "." + m + "." + s;
+        document.getElementById("clock").innerHTML = time;
+
+        // Put weekday name into element named dayName
+        document.getElementById("dayName").innerHTML = dayName;
+
+        // Put the date string into a element named dateString
+        document.getElementById("dateString").innerHTML =  day + "." + month + "." + year;
+
+        // After 1000 ms (1 s) call showTime() again
+        setTimeout(showTime, 1000);
+
+    }
+
+    showTime();
 </script>
