--- a/views/hourly.handlebars
+++ b/views/hourly.handlebars
@@ -9,6 +9,7 @@
 
 <table>
     <tr>
+        <th>Päivä</th>
         <th>Tunti</th>
         <th>Hinta (snt/kWh)</th>
     </tr>
@@ -17,6 +18,7 @@
 
     <!-- Create a row and put values into columns according to keys hour and price-->
     <tr>
+        <td>{{day}}</td>
         <td>{{hour}}</td>
         <td>{{price}}</td>
     </tr>
